# miv

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
src/: Makefile  common.hpp  main.cpp
src/action/: action.cpp  action.hpp  common.cpp  common.hpp
src/config/: config.cpp  config.hpp  iconfig.hpp
src/file/: file.cpp  file.hpp
src/frame/: frame.cpp  frame.hpp  mode.hpp
src/miv/: controller.cpp  controller.cpp.autosave  controller.hpp  input.cpp  input.hpp  miv.cpp  miv.hpp  screen.hpp
src/ui/: ncurses.cpp  ncurses.hpp  ui.cpp  ui.hpp
src/utils/: common.hpp  logger.hpp  utils.hpp
src/utils/libtermkey/: CMakeLists.txt
src/utils/spdlog/details/: format.cc  format.h
src/xarray/: splitlist.cpp  splitlist.hpp  xarray.cpp  xarray.hpp
test/xarray/: splitlist-tester.cpp  splitlist-tester.hpp
